tests/errors/test_undefined_variable.mob
// Test undefined variable error
print("Testing undefined variable...");
var x = undefined_variable;
print("This should not print");
